--- a/www/pizza-slice/style.css
+++ b/www/pizza-slice/style.css
@@ -254,7 +254,7 @@ body .pizza .slice:after {
 #start:hover, #reset:hover, #negative:hover {
   opacity: 0.8;
 }
-#start, #reset, #negative {
+#start, #reset, #negative, #mute {
   transition: all 300ms ease;
   padding: 0.5rem 1rem;
   font-size: 1rem;
@@ -265,4 +265,8 @@ body .pizza .slice:after {
 }
 #reset {
   margin-left: 0.5rem;
+}
+#mute {
+  text-shadow: 0px 0px 3px black;
+  font-size: 2rem;
 }
